--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
   <meta charset="utf-8">
-  <title>eKcal - Twój Kalkulator Kalorii</title>
+  <title>wegebus - dostawa warzyw do domu</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
