--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&amp;subset=latin-ext">
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500">
   <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap">
 
   <meta name="description" content="Kontroluj swoją dietę oraz oblicz swoje zapotrzebowanie kaloryczne z eKcal.pl">
   <meta name="keywords" content="kalkulator, kalorie, zdrowie, dieta, licznik, TDEE, BMR, EAT, TEF, NEAT, przemiana, materii,">
