Major changes in App

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500">
   <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
   <meta name="description" content="Kontroluj swoją dietę oraz oblicz swoje zapotrzebowanie kaloryczne z eKcal.pl">
   <meta name="keywords" content="kalkulator, kalorie, zdrowie, dieta, licznik, TDEE, BMR, EAT, TEF, NEAT, przemiana, materii,">
