--- a/src/index.html
+++ b/src/index.html
@@ -15,22 +15,22 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-  <meta name="description" content="Kontroluj swoją dietę oraz oblicz swoje zapotrzebowanie kaloryczne z eKcal.pl">
-  <meta name="keywords" content="kalkulator, kalorie, zdrowie, dieta, licznik, TDEE, BMR, EAT, TEF, NEAT, przemiana, materii,">
+  <meta name="description" content="wegebus.pl - dostawa świeżych warzyw w okolicach Kalisza. Zapraszamy do prześledzenia oferty. ">
+  <meta name="keywords" content="warzywa, dostawa pod drzwi, kurier, świeże, pyszne warzywa, Kalisz, woj Wielkopolskie">
   <meta name="author" content="Łukasz Krawczak">
 
   <meta property="fb:app_id" content="2439007089753255">
-  <meta property="og:url" content="https://ekcal.pl">
-  <meta property="og:title" content="eKcal - Twój Kalkulator Kalorii">
-  <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/fitx-beba9.appspot.com/o/seo%2Fekcal.jpg?alt=media&token=fb93543e-2f94-4d6d-826c-d879513f1c9a">
+  <meta property="og:url" content="https://wegebus.pl">
+  <meta property="og:title" content="wegebus.pl">
+  <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/wegebus-test.appspot.com/o/img%2Fmain-wallpaper-small.jpg?alt=media&token=e06a0b81-4d58-422b-be52-adf74625940f">
   <meta property="og:type" content="website">
-  <meta property="og:description" content="Kontroluj swoją dietę z eKcal.pl">
+  <meta property="og:description" content="Dostawa świeżych warzyw w okolicach Kalisza. Zapraszamy do prześledzenia oferty.">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="https://ekcal.pl">
-  <meta name="twitter:title" content="eKcal - Twój Kalkulator Kalorii">
-  <meta name="twitter:description" content="Kontroluj swoją dietę z eKcal.pl">
-  <meta name="twitter:image" content="https://firebasestorage.googleapis.com/v0/b/fitx-beba9.appspot.com/o/seo%2Fekcal.jpg?alt=media&token=fb93543e-2f94-4d6d-826c-d879513f1c9a">
+  <meta name="twitter:site" content="https://wegebus.pl">
+  <meta name="twitter:title" content="wegebus.pl">
+  <meta name="twitter:description" content="Dostawa świeżych warzyw w okolicach Kalisza. Zapraszamy do prześledzenia oferty.">
+  <meta name="twitter:image" content="https://firebasestorage.googleapis.com/v0/b/wegebus-test.appspot.com/o/img%2Fmain-wallpaper-small.jpg?alt=media&token=e06a0b81-4d58-422b-be52-adf74625940f">
   <meta name="twitter:creator" content="Łukasz Krawczak">
 </head>
 <body> <app-root></app-root>
